--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled">About Us</a>
+                <a class="nav-link disabled">About</a>
               </li>
             </ul>
             <form class="d-flex">
